# SQU_assistant

./: main.py  pyproject.toml
logs/: LOG.txt
modules/: brain.py  listener.py  speaker.py  visuals.py
