[project]
name = "squ-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faster-whisper>=1.2.1",
    "numpy>=2.3.5",
    "openai-whisper>=20250625",
    "pyaudio>=0.2.14",
    "pygame>=2.6.1",
    "requests>=2.32.5",
    "setuptools-rust>=1.12.0",
    "sounddevice>=0.5.5",
    "speechrecognition>=3.14.5",
]
